python/rregadmin/hive/hcheck_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.hive.hive_check_wrapper -r ^hcheck_.* -o hcheck_wrapper.py hcheck_wrapper.xml'
from ctypes import *

from rregadmin.hive.hive_check_wrapper import gboolean
from rregadmin.hive.hive_check_wrapper import Hive
from rregadmin.hive.hive_check_wrapper import RRACheckData
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')


# ../../../rregadmin/hive/hcheck_decl.h 41
hcheck_hive_pass = _libraries['librregadmin.so.1'].hcheck_hive_pass
hcheck_hive_pass.restype = gboolean
# hcheck_hive_pass(in_hive, in_data)
hcheck_hive_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_hive_pass.__doc__ = \
"""gboolean hcheck_hive_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:41"""
# ../../../rregadmin/hive/hcheck_decl.h 47
hcheck_bin_pass = _libraries['librregadmin.so.1'].hcheck_bin_pass
hcheck_bin_pass.restype = gboolean
# hcheck_bin_pass(in_hive, in_data)
hcheck_bin_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_bin_pass.__doc__ = \
"""gboolean hcheck_bin_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:47"""
# ../../../rregadmin/hive/hcheck_decl.h 53
hcheck_cell_pass = _libraries['librregadmin.so.1'].hcheck_cell_pass
hcheck_cell_pass.restype = gboolean
# hcheck_cell_pass(in_hive, in_data)
hcheck_cell_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_cell_pass.__doc__ = \
"""gboolean hcheck_cell_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:53"""
# ../../../rregadmin/hive/hcheck_decl.h 59
hcheck_key_cell_pass = _libraries['librregadmin.so.1'].hcheck_key_cell_pass
hcheck_key_cell_pass.restype = gboolean
# hcheck_key_cell_pass(in_hive, in_data)
hcheck_key_cell_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_key_cell_pass.__doc__ = \
"""gboolean hcheck_key_cell_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:59"""
# ../../../rregadmin/hive/hcheck_decl.h 65
hcheck_value_key_cell_pass = _libraries['librregadmin.so.1'].hcheck_value_key_cell_pass
hcheck_value_key_cell_pass.restype = gboolean
# hcheck_value_key_cell_pass(in_hive, in_data)
hcheck_value_key_cell_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_value_key_cell_pass.__doc__ = \
"""gboolean hcheck_value_key_cell_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:65"""
# ../../../rregadmin/hive/hcheck_decl.h 71
hcheck_key_list_cell_pass = _libraries['librregadmin.so.1'].hcheck_key_list_cell_pass
hcheck_key_list_cell_pass.restype = gboolean
# hcheck_key_list_cell_pass(in_hive, in_data)
hcheck_key_list_cell_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_key_list_cell_pass.__doc__ = \
"""gboolean hcheck_key_list_cell_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:71"""
# ../../../rregadmin/hive/hcheck_decl.h 78
hcheck_security_descriptor_cell_pass = _libraries['librregadmin.so.1'].hcheck_security_descriptor_cell_pass
hcheck_security_descriptor_cell_pass.restype = gboolean
# hcheck_security_descriptor_cell_pass(in_hive, in_data)
hcheck_security_descriptor_cell_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_security_descriptor_cell_pass.__doc__ = \
"""gboolean hcheck_security_descriptor_cell_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:78"""
# ../../../rregadmin/hive/hcheck_decl.h 84
hcheck_gc_pass = _libraries['librregadmin.so.1'].hcheck_gc_pass
hcheck_gc_pass.restype = gboolean
# hcheck_gc_pass(in_hive, in_data)
hcheck_gc_pass.argtypes = [POINTER(Hive), POINTER(RRACheckData)]
hcheck_gc_pass.__doc__ = \
"""gboolean hcheck_gc_pass(Hive * in_hive, RRACheckData * in_data)
../../../rregadmin/hive/hcheck_decl.h:84"""
__all__ = ['hcheck_key_cell_pass', 'hcheck_hive_pass',
           'hcheck_value_key_cell_pass', 'hcheck_key_list_cell_pass',
           'hcheck_bin_pass', 'hcheck_cell_pass',
           'hcheck_security_descriptor_cell_pass', 'hcheck_gc_pass']
